--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -23,7 +23,7 @@
             android:textSize="16sp"
             android:textStyle="bold"/>
     </RelativeLayout>
-    <View style="@style/LineGrey1dp"/>
+    <View style="@style/LineGrey1px"/>
     <ScrollView android:layout_width="match_parent"
                 android:layout_height="match_parent">
         <LinearLayout
@@ -46,42 +46,26 @@
             />
             <LinearLayout android:layout_width="match_parent"
                           android:layout_height="32dp"
+                          android:layout_marginLeft="16dp"
                           android:background="@color/white"
                           android:gravity="center_vertical"
                           android:orientation="horizontal">
-                <ImageView android:layout_width="24dp"
+                <ImageView android:layout_width="8dp"
                            android:layout_height="24dp"
-                           android:src="@mipmap/ic_launcher"
+                           android:src="@drawable/shape_rectangle"
                 />
                 <TextView android:layout_width="match_parent"
                           android:layout_height="wrap_content"
+                          android:layout_marginLeft="8dp"
                           android:text="成功案例"
                           android:textColor="@color/colorPrimary"/>
             </LinearLayout>
             <com.ddgj.dd.view.CustomListView
                 android:id="@+id/success"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="@color/white">
 
-            </com.ddgj.dd.view.CustomListView>
-            <LinearLayout android:layout_width="match_parent"
-                          android:layout_height="32dp"
-                          android:background="@color/white"
-                          android:gravity="center_vertical"
-                          android:orientation="horizontal">
-                <ImageView android:layout_width="24dp"
-                           android:layout_height="24dp"
-                           android:src="@mipmap/ic_launcher"
-                />
-                <TextView android:layout_width="match_parent"
-                          android:layout_height="wrap_content"
-                          android:text="推荐订制"
-                          android:textColor="@color/colorPrimary"/>
-            </LinearLayout>
-            <com.ddgj.dd.view.CustomListView
-                android:id="@+id/recommend"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
             </com.ddgj.dd.view.CustomListView>
         </LinearLayout>
     </ScrollView>
