--- a/app/src/main/res/drawable/shape_shadow_v_up.xml
+++ b/app/src/main/res/drawable/shape_shadow_v_up.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <gradient android:startColor="#00000000" android:endColor="#AAAAAAAA" android:angle="90"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <gradient
+        android:angle="90"
+        android:endColor="#88888888"
+        android:startColor="#00000000"/>
 
 </shape>
