--- a/app/src/main/res/layout/activity_city_selector.xml
+++ b/app/src/main/res/layout/activity_city_selector.xml
@@ -5,12 +5,49 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/alphaBlack"
     tools:context="com.ddgj.dd.activity.CitySelectorActivity">
-    <com.ddgj.dd.view.city_selector.CityPicker
-        android:id="@+id/citypicker"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_gravity="center"
-        android:gravity="center" >
-    </com.ddgj.dd.view.city_selector.CityPicker>
+    <LinearLayout
+        android:id="@+id/content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical">
+        <com.ddgj.dd.view.city_selector.CityPicker
+            android:id="@+id/citypicker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center">
+        </com.ddgj.dd.view.city_selector.CityPicker>
+        <View style="@style/LineBlue1dp"
+              android:layout_marginTop="16dp"/>
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:orientation="horizontal">
+            <TextView android:layout_width="0dp"
+                      android:layout_height="wrap_content"
+                      android:layout_weight="5"
+                      android:clickable="true"
+                      android:gravity="center"
+                      android:onClick="backClick"
+                      android:padding="8dp"
+                      android:text="取消"
+                      android:textColor="@color/colorPrimary"
+                      android:textSize="16sp"/>
+            <View android:layout_width="1px" android:layout_height="match_parent"
+                  android:background="@color/colorPrimary"/>
+            <TextView android:layout_width="0dp"
+                      android:layout_height="wrap_content"
+                      android:layout_weight="5"
+                      android:clickable="true"
+                      android:gravity="center"
+                      android:onClick="okClick"
+                      android:padding="8dp"
+                      android:text="确认"
+                      android:textColor="@color/colorPrimary"
+                      android:textSize="16sp"/>
+        </LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
