--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -60,7 +60,7 @@
         </LinearLayout>
     </LinearLayout>
     <View
-        style="@style/LineGrey1dp"/>
+        style="@style/LineGrey1px"/>
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="8dp"
@@ -73,7 +73,7 @@
             android:text="搜索历史"/>
         <ImageView android:layout_width="40dp"
                    android:layout_height="40dp"
-                   android:background="@drawable/ripple_bg"
+                   android:background="@drawable/ripple_bg_grey"
                    android:clickable="true"
                    android:onClick="clearClick"
                    android:padding="4dp"
