--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -9,6 +9,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/grey_lightE"
         android:fadingEdge="none"
         android:scrollbars="none">
 
@@ -64,8 +65,8 @@
                             android:id="@+id/user_name"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:gravity="center"
                             android:layout_marginTop="8dp"
+                            android:gravity="center"
                             android:padding="5dp"
                             android:text="@string/click_login"
                             android:textColor="@color/white"
@@ -88,14 +89,16 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="4dp"
+                android:layout_height="8dp"
                 android:background="@drawable/shape_shadow_v_up"/>
-
+            <View
+                style="@style/LineGrey1px"
+                android:layout_marginTop="8dp"/>
             <LinearLayout
                 android:id="@+id/personal_center"
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:background="@drawable/ripple_bg"
+                android:layout_height="56dp"
+                android:background="@drawable/ripple_bg_white"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -120,15 +123,14 @@
             </LinearLayout>
 
             <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/grey_light"/>
+                style="@style/LineGrey1px"
+                android:layout_marginLeft="16dp"/>
 
             <LinearLayout
                 android:id="@+id/mine_favorite"
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:background="@drawable/ripple_bg"
+                android:layout_height="56dp"
+                android:background="@drawable/ripple_bg_white"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -151,17 +153,14 @@
                     android:layout_marginRight="16dp"
                     android:src="@mipmap/ic_chevron_right_black_24dp"/>
             </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/grey_light"/>
-
+            <View style="@style/LineGrey1px"/>
+            <View style="@style/LineGrey1px"
+            android:layout_marginTop="16dp"/>
             <LinearLayout
                 android:id="@+id/app_settings"
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:background="@drawable/ripple_bg"
+                android:layout_height="56dp"
+                android:background="@drawable/ripple_bg_white"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -186,15 +185,14 @@
             </LinearLayout>
 
             <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/grey_light"/>
+                style="@style/LineGrey1px"
+                android:layout_marginLeft="16dp"/>
 
             <LinearLayout
                 android:id="@+id/share_to_friend"
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:background="@drawable/ripple_bg"
+                android:layout_height="56dp"
+                android:background="@drawable/ripple_bg_white"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -217,17 +215,13 @@
                     android:layout_marginRight="16dp"
                     android:src="@mipmap/ic_chevron_right_black_24dp"/>
             </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/grey_light"/>
-
+            <View style="@style/LineGrey1px"/>
+            <View style="@style/LineGrey1px" android:layout_marginTop="16dp"/>
             <LinearLayout
                 android:id="@+id/about_us"
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:background="@drawable/ripple_bg"
+                android:layout_height="56dp"
+                android:background="@drawable/ripple_bg_white"
                 android:clickable="true"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
@@ -252,12 +246,7 @@
                     android:src="@mipmap/ic_chevron_right_black_24dp"/>
             </LinearLayout>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/grey_light"/>
-
-
+            <View style="@style/LineGrey1px"/>
         </LinearLayout>
     </ScrollView>
 
