--- a/app/src/main/res/layout/fragment_user_center_enterprise.xml
+++ b/app/src/main/res/layout/fragment_user_center_enterprise.xml
@@ -1,137 +1,174 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/grey_lightE"
-              android:orientation="vertical">
-    <View style="@style/LineGrey1dp"
-          android:layout_marginTop="16dp"/>
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/grey_lightE">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:layout_height="match_parent"
         android:orientation="vertical">
+        <View style="@style/LineGrey1px"
+              android:layout_marginTop="16dp"/>
+        <LinearLayout
+            android:id="@+id/ll_icon"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:orientation="horizontal">
+            <com.ddgj.dd.view.CircleImageView
+                android:id="@+id/icon"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginBottom="4dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="4dp"
+                android:src="@mipmap/ic_account_circle_grey600_24dp"
+                app:border_color="@color/white"
+                app:border_width="2dp"/>
+            <View android:layout_width="0dp"
+                  android:layout_height="0dp"
+                  android:layout_weight="1"/>
+            <ImageView android:layout_width="24dp"
+                       android:layout_height="24dp"
+                       android:layout_gravity="center_vertical"
+                       android:layout_marginRight="16dp"
+                       android:src="@mipmap/ic_chevron_right_black_24dp"/>
+        </LinearLayout>
+        <View android:layout_width="match_parent"
+              android:layout_height="6dp"
+              android:background="@drawable/shape_shadow_v_up"/>
 
+        <View style="@style/LineGrey1px"
+              android:layout_marginTop="16dp"/>
         <LinearLayout
-            style="@style/UserInfoLinerLayout">
-            <TextView
-                style="@style/UserInfoNames"
-                android:text="@string/user_name"/>
-            <TextView
-                android:id="@+id/enterprise_id"
-                style="@style/UserInfoValues"
-                android:text="@string/not_set"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:orientation="vertical">
+
+            <LinearLayout
+                style="@style/UserInfoLinerLayout">
+                <TextView
+                    style="@style/UserInfoNames"
+                    android:text="@string/user_name"/>
+                <TextView
+                    android:id="@+id/enterprise_id"
+                    style="@style/UserInfoValues"
+                    android:text="@string/not_set"/>
+            </LinearLayout>
+            <View style="@style/LineGrey1px"
+                  android:layout_marginLeft="16dp"/>
+            <LinearLayout
+                style="@style/UserInfoLinerLayout">
+                <TextView
+                    style="@style/UserInfoNames"
+                    android:text="@string/enterprise_name"/>
+                <TextView
+                    android:id="@+id/enterprise_name"
+                    style="@style/UserInfoValues"
+                    android:text="@string/not_set"/>
+            </LinearLayout>
+            <View style="@style/LineGrey1px"
+                  android:layout_marginLeft="16dp"/>
+            <LinearLayout
+                style="@style/UserInfoLinerLayout">
+                <TextView
+                    style="@style/UserInfoNames"
+                    android:text="@string/enterprise_scale"/>
+                <TextView
+                    android:id="@+id/enterprise_scale"
+                    style="@style/UserInfoValues"
+                    android:text="@string/not_set"/>
+            </LinearLayout>
+            <View style="@style/LineGrey1px"
+                  android:layout_marginLeft="16dp"/>
+            <LinearLayout
+                style="@style/UserInfoLinerLayout">
+                <TextView
+                    style="@style/UserInfoNames"
+                    android:text="@string/enterprise_field"/>
+                <TextView
+                    android:id="@+id/enterprise_field"
+                    style="@style/UserInfoValues"
+                    android:text="@string/not_set"/>
+            </LinearLayout>
+            <View style="@style/LineGrey1px"
+                  android:layout_marginLeft="16dp"/>
+            <LinearLayout
+                style="@style/UserInfoLinerLayout">
+                <TextView
+                    style="@style/UserInfoNames"
+                    android:text="@string/enterprise_area"/>
+                <TextView
+                    android:id="@+id/enterprise_area"
+                    style="@style/UserInfoValues"
+                    android:text="@string/not_set"/>
+            </LinearLayout>
         </LinearLayout>
-        <View style="@style/LineGrey1dp"
-              android:layout_marginLeft="16dp"/>
+        <View android:layout_width="match_parent"
+              android:layout_height="6dp"
+              android:background="@drawable/shape_shadow_v_up"/>
+        <View style="@style/LineGrey1px"
+              android:layout_marginTop="16dp"/>
         <LinearLayout
-            style="@style/UserInfoLinerLayout">
-            <TextView
-                style="@style/UserInfoNames"
-                android:text="@string/enterprise_name"/>
-            <TextView
-                android:id="@+id/enterprise_name"
-                style="@style/UserInfoValues"
-                android:text="@string/not_set"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:orientation="vertical">
+
+            <LinearLayout
+                style="@style/UserInfoLinerLayout">
+                <TextView
+                    style="@style/UserInfoNames"
+                    android:text="@string/enterprise_address"/>
+                <TextView
+                    android:id="@+id/enterprise_address"
+                    style="@style/UserInfoValues"
+                    android:text="@string/not_set"/>
+            </LinearLayout>
+            <View style="@style/LineGrey1px"
+                  android:layout_marginLeft="16dp"/>
+            <LinearLayout
+                style="@style/UserInfoLinerLayout">
+                <TextView
+                    style="@style/UserInfoNames"
+                    android:text="@string/email"/>
+                <TextView
+                    android:id="@+id/enterprise_email"
+                    style="@style/UserInfoValues"
+                    android:text="@string/not_set"/>
+            </LinearLayout>
+            <View style="@style/LineGrey1px"
+                  android:layout_marginLeft="16dp"/>
+            <LinearLayout
+                style="@style/UserInfoLinerLayout">
+                <TextView
+                    style="@style/UserInfoNames"
+                    android:text="@string/enterprise_link_name"/>
+                <TextView
+                    android:id="@+id/enterprise_link_name"
+                    style="@style/UserInfoValues"
+                    android:text="@string/not_set"/>
+            </LinearLayout>
+            <View style="@style/LineGrey1px"
+                  android:layout_marginLeft="16dp"/>
+            <LinearLayout
+                style="@style/UserInfoLinerLayout">
+                <TextView
+                    style="@style/UserInfoNames"
+                    android:text="@string/enterprise_contact"/>
+                <TextView
+                    android:id="@+id/enterprise_contact"
+                    style="@style/UserInfoValues"
+                    android:text="@string/not_set"/>
+            </LinearLayout>
         </LinearLayout>
-        <View style="@style/LineGrey1dp"
-              android:layout_marginLeft="16dp"/>
-        <LinearLayout
-            style="@style/UserInfoLinerLayout">
-            <TextView
-                style="@style/UserInfoNames"
-                android:text="@string/enterprise_scale"/>
-            <TextView
-                android:id="@+id/enterprise_scale"
-                style="@style/UserInfoValues"
-                android:text="@string/not_set"/>
-        </LinearLayout>
-        <View style="@style/LineGrey1dp"
-              android:layout_marginLeft="16dp"/>
-        <LinearLayout
-            style="@style/UserInfoLinerLayout">
-            <TextView
-                style="@style/UserInfoNames"
-                android:text="@string/enterprise_field"/>
-            <TextView
-                android:id="@+id/enterprise_field"
-                style="@style/UserInfoValues"
-                android:text="@string/not_set"/>
-        </LinearLayout>
-        <View style="@style/LineGrey1dp"
-              android:layout_marginLeft="16dp"/>
-        <LinearLayout
-            style="@style/UserInfoLinerLayout">
-            <TextView
-                style="@style/UserInfoNames"
-                android:text="@string/enterprise_area"/>
-            <TextView
-                android:id="@+id/enterprise_area"
-                style="@style/UserInfoValues"
-                android:text="@string/not_set"/>
-        </LinearLayout>
+        <View android:layout_width="match_parent"
+              android:layout_height="6dp"
+              android:background="@drawable/shape_shadow_v_up"/>
+
     </LinearLayout>
-    <View android:layout_width="match_parent"
-          android:layout_height="6dp"
-          android:background="@drawable/shape_shadow_v_up"/>
-    <View style="@style/LineGrey1dp"
-          android:layout_marginTop="16dp"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:orientation="vertical">
-
-        <LinearLayout
-            style="@style/UserInfoLinerLayout">
-            <TextView
-                style="@style/UserInfoNames"
-                android:text="@string/enterprise_address"/>
-            <TextView
-                android:id="@+id/enterprise_address"
-                style="@style/UserInfoValues"
-                android:singleLine="false"
-                android:text="@string/not_set"/>
-        </LinearLayout>
-        <View style="@style/LineGrey1dp"
-              android:layout_marginLeft="16dp"/>
-        <LinearLayout
-            style="@style/UserInfoLinerLayout">
-            <TextView
-                style="@style/UserInfoNames"
-                android:text="@string/email"/>
-            <TextView
-                android:id="@+id/enterprise_email"
-                style="@style/UserInfoValues"
-                android:text="@string/not_set"/>
-        </LinearLayout>
-        <View style="@style/LineGrey1dp"
-              android:layout_marginLeft="16dp"/>
-        <LinearLayout
-            style="@style/UserInfoLinerLayout">
-            <TextView
-                style="@style/UserInfoNames"
-                android:text="@string/enterprise_link_name"/>
-            <TextView
-                android:id="@+id/enterprise_link_name"
-                style="@style/UserInfoValues"
-                android:text="@string/not_set"/>
-        </LinearLayout>
-        <View style="@style/LineGrey1dp"
-              android:layout_marginLeft="16dp"/>
-        <LinearLayout
-            style="@style/UserInfoLinerLayout">
-            <TextView
-                style="@style/UserInfoNames"
-                android:text="@string/enterprise_contact"/>
-            <TextView
-                android:id="@+id/enterprise_contact"
-                style="@style/UserInfoValues"
-                android:text="@string/not_set"/>
-        </LinearLayout>
-    </LinearLayout>
-    <View android:layout_width="match_parent"
-          android:layout_height="6dp"
-          android:background="@drawable/shape_shadow_v_up"/>
-
-</LinearLayout>
+</ScrollView>
