--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -8,7 +8,7 @@
         android:layout_width="120dp"
         android:layout_height="128dp"
         android:scaleType="centerCrop"
-        android:src="@mipmap/ic_launcher"/>
+        android:src="@mipmap/ic_crop_original_grey600_48dp"/>
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="128dp"
                   android:layout_marginLeft="8dp"
@@ -30,7 +30,8 @@
                   android:maxLines="3"
                   android:textColor="@color/grey"
                   android:textSize="12sp"/>
-        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
+        <TextView android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
                   android:drawableLeft="@mipmap/ic_location_on_grey600_24dp"
                   android:gravity="center_vertical"
                   android:maxLines="1"
