--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -70,6 +70,7 @@
         <item name="android:layout_weight">1</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
     <!-- 用户资料界面列表项样式 -->
     <style name="UserInfoLinerLayout">
@@ -104,10 +105,15 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">16sp</item>
     </style>
-    <style name="LineGrey1dp">
+    <style name="LineGrey1px">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1px</item>
         <item name="android:background">@color/grey_light</item>
+    </style>
+    <style name="LineBlue1dp">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1px</item>
+        <item name="android:background">@color/colorPrimary</item>
     </style>
     <style name="LineBlack1px">
         <item name="android:layout_width">match_parent</item>
