--- a/app/src/main/res/layout/activity_oemproduct.xml
+++ b/app/src/main/res/layout/activity_oemproduct.xml
@@ -52,5 +52,15 @@
                 android:gravity="center"
                 android:text="@string/loading_data"/>
         </LinearLayout>
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_margin="16dp"
+            android:src="@mipmap/ic_add_white_24dp"
+            app:backgroundTint="@color/colorPrimary"/>
     </RelativeLayout>
 </LinearLayout>
