--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -1,10 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:id="@+id/content_container"
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".activity.WebActivity">
+    <RelativeLayout
+        style="@style/ActionBarLightTheme">
+        <ImageView
+            style="@style/TitleBarImageTheme"
+            android:clickable="true"
+            android:onClick="backClick"
+            android:src="@mipmap/ic_blue_back"/>
+        <TextView
+            android:id="@+id/title"
+            style="@style/TitleBarFactoryTextTheme"/>
+    </RelativeLayout>
 
-</RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/content_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </RelativeLayout>
+</LinearLayout>
