--- a/app/src/main/res/layout/item_factory_list_factory.xml
+++ b/app/src/main/res/layout/item_factory_list_factory.xml
@@ -6,21 +6,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
-        <LinearLayout
-            android:layout_width="120dp"
-            android:layout_height="120dp">
+
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:src="@mipmap/f_factory"
+                android:id="@+id/img_factory_pic"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:scaleType="centerCrop"
                 />
 
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
             <TextView
                 android:id="@+id/tv_factory_title"
@@ -50,7 +47,7 @@
                     android:id="@+id/tv_factory_field"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="吃饭睡觉打豆豆"
+                    android:text=""
                     android:textColor="@color/factorysize"
                     android:paddingTop="7dp"
                     android:paddingBottom="5dp"
@@ -74,7 +71,7 @@
                     android:id="@+id/tv_factory_scale"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="吃饭睡觉打豆豆"
+                    android:text=""
                     android:textColor="@color/factorysize"
                     android:paddingTop="7dp"
                     android:paddingBottom="5dp"
@@ -86,7 +83,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <TextView
-                    android:id="@+id/tv_factory_address"
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="地址"
@@ -96,9 +93,10 @@
                     android:paddingRight="10dp"
                     />
                 <TextView
+                    android:id="@+id/tv_factory_address"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="吃饭睡觉打豆豆"
+                    android:text=""
                     android:textColor="@color/factorysize"
                     android:paddingTop="7dp"
                     android:paddingBottom="5dp"
